--- a/.github/actions/get-extension-version/action.yml
+++ b/.github/actions/get-extension-version/action.yml
@@ -1,73 +1,17 @@
-name: Populate ps_modules folders
-description: Copy scripts from Modules into extension tasks ps_modules folders. Also remove readme.md.
+name: Get extension version
+description: Scripts that load vss-extension.json and get the version and set to variable.
 
 runs:
   using: "composite"
 
   steps:
-    - name: Copy scripts ps_modules folders
-      shell: pwsh
-      run: |
-        Write-Host "---Start---"
-        function CopyItems {
-            param (
-                [Parameter(Mandatory = $true)]
-                [string]$path,
-
-                [Parameter(Mandatory = $true)]
-                [string]$destinationPath
-            )
-
-            try {
-                Copy-Item -Path $path -Destination $destinationPath -Recurse -Force
-                Write-Host "Successfully copied '$path' to '$destinationPath'." -ForegroundColor Green
-            }
-            catch {
-                Write-Error "Failed to copy '$path' to '$destinationPath': $_"
-            }
-        }
-        $utilScript = (Get-Item -Path Modules/EpinovaDxpDeploymentUtil.ps1).FullName
-        $epiCloudModule = (Get-Item -Path Modules/EpiCloud).FullName
-        $vstsModule = (Get-Item -Path Modules/VstsTaskSdk).FullName
-        
-        $srcRootPath = (Get-Item .\* | Where-Object {$_.FullName.EndsWith("src")})
-        $dir = Get-ChildItem -Path $srcRootPath -Directory
-        foreach ($d in $dir){
-            $psmodulesPath = Join-Path -Path $d.FullName -ChildPath "ps_modules"
-            Write-Host "psmodulesPath $psmodulesPath"
-            $filePath = $d.FullName
-            Write-Host "filePath $filePath"
-            if (Test-Path $psmodulesPath){
-                CopyItems -path $utilScript -destinationPath $filePath
-                CopyItems -path $epiCloudModule -destinationPath $filePath
-                CopyItems -path $vstsModule -destinationPath $filePath
-                $readmeFilePath = $psmodulesPath + "/readme.md"
-                if (Test-Path $readmeFilePath) {
-                  Remove-Item -Path $readmeFilePath -Force
-                  Write-Host "Removed item $readmeFilePath"
-                }
-                #Write-Host "Copy $utilScript to $filePath"
-                #Copy-Item -Path $utilScript -Destination $filePath -Recurse -Force
-            }
-            else {
-                # Handle if we have directories for versions.
-                $subdir = Get-ChildItem -Path $d.FullName -Directory
-                foreach ($sd in $subdir){
-                    $subfilePath = Join-Path -Path $sd.FullName -ChildPath "ps_modules"
-                    Write-Host "subfilePath $subfilePath"
-                    if (Test-Path $subfilePath){
-                        CopyItems -path $utilScript -destinationPath $subfilePath
-                        CopyItems -path $epiCloudModule -destinationPath $subfilePath
-                        CopyItems -path $vstsModule -destinationPath $subfilePath
-                        $readmeFilePath = $subfilePath + "/readme.md"
-                        if (Test-Path $readmeFilePath) {
-                          Remove-Item -Path $readmeFilePath -Force
-                          Write-Host "Removed item $readmeFilePath"
-                        }
-                        #Write-Host "Copy $utilScript to $subfilePath"
-                        #Copy-Item -Path $utilScript -Destination $subfilePath -Recurse -Force
-                    }
-                }        
-            }
-        }
-        Write-Host "---End---"
+      - name: Get extension version
+        shell: pwsh
+        run: |
+          $version = (Get-Content src/vss-extension.json) -join "`n" | ConvertFrom-Json | Select -ExpandProperty "version"
+          $buildNumber = $env:GITHUB_RUN_NUMBER
+          $extVersion = "v$version-$buildNumber"
+          Write-Host "Try to set VERSION to $version"
+          Add-Content -Path $env:GITHUB_ENV -Value "VERSION=$version"
+          Write-Host "Try to set EXTENSION_VERSION to $extVersion"
+          Add-Content -Path $env:GITHUB_ENV -Value "EXTENSION_VERSION=$extVersion"
