--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -16,16 +16,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # - name: Get extension version
-      #   shell: pwsh
-      #   run: |
-      #     $version = (Get-Content src/vss-extension.json) -join "`n" | ConvertFrom-Json | Select -ExpandProperty "version"
-      #     $buildNumber = $env:GITHUB_RUN_NUMBER
-      #     $extVersion = "v$version-$buildNumber"
-      #     Write-Host "Try to set VERSION to $version"
-      #     Add-Content -Path $env:GITHUB_ENV -Value "VERSION=$version"
-      #     Write-Host "Try to set EXTENSION_VERSION to $extVersion"
-      #     Add-Content -Path $env:GITHUB_ENV -Value "EXTENSION_VERSION=$extVersion"
       - uses: ./.github/actions/get-extension-version
 
       - name: Show VERSION/EXTENSION_VERSION
@@ -33,14 +23,66 @@ jobs:
           echo "VERSION=$VERSION"
           echo "EXTENSION_VERSION=$EXTENSION_VERSION"
 
-      - uses: ./.github/actions/populate-psmodules-folders
+      # - uses: ./.github/actions/populate-psmodules-folders
 
-      - uses: ./.github/actions/build-node-tasks
+      # - uses: ./.github/actions/build-node-tasks
 
-      - name: Rename tasks to TEST
-        shell: pwsh
+      # - name: Rename tasks to TEST
+      #   shell: pwsh
+      #   run: |
+      #     ./BuildScripts/RenameTasksToTest.ps1
+
+      - uses: ./.github/actions/rename-tasks
+        with:
+          TaskNameSuffix: "-TEST"
+
+      - uses: ./.github/actions/update-vss-extension-json
+        with:
+          id: "d7aa7a0b-20b5-4d3b-aaea-a46a1d4d53ce"
+          name: "Epinova Optimizely DXP deployment - TEST"
+          public: "false"
+
+      - name: Generate deterministic extension ID (UUIDv5)
         run: |
-          ./BuildScripts/RenameTasksToTest.ps1
+            npm install uuid
+            node <<'EOF'
+            const { v5 } = require('uuid');
+            
+            // Use URL namespace
+            const URL_NAMESPACE = "https://marketplace.visualstudio.com/vsts"; // v5.URL; // Built-in constant equivalent to "6ba7b811-9dad-11d1-80b4-00c04fd430c8"
+            
+            const publisherId = process.env.PUBLISHER_ID;
+            const extensionId = process.env.EXTENSION_ID;
+            const taskName = process.env.TASK_NAME;
+        
+            const manifestString = `${publisherId}.${extensionId}.${taskName}`;
+            const taskUuid = v5(manifestString, URL_NAMESPACE);
+        
+            console.log(`task_uuid=${taskUuid}`);
+            console.log(`::set-output name=task_uuid::${taskUuid}`);
+            EOF
+        id: generate_extension_uuid
+        env:
+            PUBLISHER_ID: ${{ secrets.EPINOVA_VS_MARKETPLACE_PUBLISHER_ID }}
+            EXTENSION_ID: 'd7aa7a0b-20b5-4d3b-aaea-a46a1d4d53ce'
+            TASK_NAME: 'DxpCompleteDeploy-TEST'
+  
+      # - name: Update vss-extension.json
+      #   shell: pwsh
+      #   run: |
+      #     $vssJsonFile = "src/vss-extension.json"
+
+      #     $json = Get-Content $vssJsonFile -raw | ConvertFrom-Json
+
+      #     $id = "$($json.id)$taskNameSuffix"
+      #     Write-Host "Update id: $id"
+      #     $json.id = "$id"
+
+      #     $json | ConvertTo-Json -depth 32| set-content $vssJsonFile
+      #     Write-Host "Updated: $vssJsonFile"
+
+
+        
 
       # - name: npm install
       #   run: npm install
