--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -50,13 +50,14 @@ jobs:
             
             // Use URL namespace
             //const URL_NAMESPACE = "https://marketplace.visualstudio.com/vsts"; // v5.URL; // Built-in constant equivalent to "6ba7b811-9dad-11d1-80b4-00c04fd430c8"
-            
+            const urlNamespace = v5('https://marketplace.visualstudio.com/vsts', v5.URL);
+
             const publisherId = process.env.PUBLISHER_ID;
             const extensionId = process.env.EXTENSION_ID;
             const taskName = process.env.TASK_NAME;
         
             const manifestString = `${publisherId}.${extensionId}.${taskName}`;
-            const taskUuid = v5(manifestString, v5.URL);
+            const taskUuid = v5(manifestString, urlNamespace);
         
             console.log(`task_uuid=${taskUuid}`);
             console.log(`::set-output name=task_uuid::${taskUuid}`);
