--- a/.github/workflows/extension-publish.yml
+++ b/.github/workflows/extension-publish.yml
@@ -1,6 +1,9 @@
 name: Publish Azure DevOps extension
 
 on:
+  push:
+    branches:
+      - none
   workflow_dispatch: # Allow manuel trigger of the workflow
 
 jobs:
