--- a/.github/workflows/extension-publish.yml
+++ b/.github/workflows/extension-publish.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch: # Allow manuel trigger of the workflow
 
 jobs:
-  build-and-publish:
+  publish-devops-extension:
     runs-on: ubuntu-latest
 
     steps:
