--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch: # Allow manuel trigger of the workflow
 
 jobs:
-  build-and-publish:
+  run-tests:
     runs-on: ubuntu-latest
 
     steps:
